@@ -1,4 +1,4 @@
-unused-wildcard-import:3:0:3:34::Unused import(s) func and only_raises from wildcard import of unused_argument_py3:UNDEFINED
+unused-wildcard-import:3:0:3:34::Unused import(s) func, only_raises and increment_factory from wildcard import of unused_argument_py3:UNDEFINED
 wildcard-import:3:0:3:34::Wildcard import unused_argument_py3:UNDEFINED
 unused-wildcard-import:4:0:4:38::Unused import(s) VAR from wildcard import of unused_global_variable1:UNDEFINED
 wildcard-import:4:0:4:38::Wildcard import unused_global_variable1:UNDEFINED
